--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,140 @@
-.App {
-  text-align: center;
+/* App.css */
+/* Maximiza la altura y el ancho de la aplicación */
+.app {
+  font-family: Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.main-content {
+  display: flex;
+  flex-direction: row;
+  width: 100%; /* Ocupa todo el ancho */
+  height: 94vh; /* Ocupa toda la altura de la pantalla */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.sidebar {
+  width: 30%; /* Ajusta el ancho de la barra lateral */
+  background-color: #ffff;
+  padding: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  border-radius:20px;
 }
 
-.App-link {
-  color: #61dafb;
+.menu-button {
+  background-color: #1d3557;
+  color: #FFE98B;
+  border: none;
+  padding: 20px;
+  text-align: center;
+  font-weight: bold;
+  margin-bottom: 10px;
+  cursor: pointer;
+  width: 90%; 
+  border-radius:20px;
+  transition: background-color 0.3s;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid #1d3557; /* Borde adicional para resaltar */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.menu-button:hover {
+  background-color: #457b9d;
+}
+
+/* Estilo del botón activo */
+.menu-button.active {
+  background-color: #2A4D6E; /* Color de fondo cuando está activo */
+  border: 2px solid #ffee8b; /* Borde adicional para resaltar */
+}
+
+
+.icon {
+  font-size: 28px; /* Aumenta el tamaño del ícono */
+  margin-bottom: 10px;
+}
+
+.title {
+  font-size: 25px;
+  font-weight: bold;
+}
+
+.description {
+  font-size: 15px;
+  text-align: center;
+  margin-top: 5px;
+  line-height: 1.5;
+  color: #FFE98B;
+}
+
+.content {
+  flex-grow: 1;
+  padding: 20px;
+  background-color: #cbdcf7;
+  border: 5px solid #0d3b66;
+  border-radius: 50px;
+  margin: 2%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.submenu {
+  background-color: #cbdcf7;
+  padding: 20px;
+  border-radius: 15px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+.submenu-item {
+  background-color: #2A4D6E;
+  color: #FFE98B;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: none;
+  cursor: pointer;
+  font-size: 20px;
+  font-weight: bold;
+  text-align: left;
+  border-radius: 20px;
+  width: 60%;
+  transition: background-color 0.3s;
+  height: 8em;
+  display: flex; /* Para alinear el texto y el ícono en la misma línea */
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 10em;
+  padding-right: 10em;
+}
+
+.submenu-item:hover {
+  background-color: #457b9d;
+}
+
+.submenu-text {
+  font-size: 20px;
+}
+
+.close-button {
+  position:fixed;
+  top: 10px;
+  right: 10px;
+  background: none;
+  border: none;
+  color: #1d3557;
+  font-size: 20px;
+  cursor: pointer;
 }
