--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,14 +1,12 @@
 /* Header.css */
 .header {
-    position: sticky;
     background-color: #0d3b66;
     color: #f1faee;
-    display: flex;
-    justify-content: start;
-    align-items: center;
+    /* display: flex; */
+    /* justify-content: start;
+    align-items: center; */
     padding: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-    /*z-index: 1000;*/
   }
   
   .nav-button {
@@ -16,7 +14,7 @@
     border: none;
     color: #f1faee;
     font-size: 20px;
-    margin-right: 15px;
+  
     cursor: pointer;
   }
   
