--- a/src/components/Variables.css
+++ b/src/components/Variables.css
@@ -46,17 +46,7 @@
     display: flex;
     padding: 20px;
   }
-  
-  /* Barra lateral */
-   .sidebar2 {
-    width: 20%;
-    background-color: #e0e0e0;
-    padding: 20px;
-    border-radius: 8px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  } 
+
   
   .code-languages {
     text-align: center;
@@ -67,13 +57,7 @@
     margin: 10px 0;
   }
   
-  /* Panel principal */
-  .main-panel {
-    height: 65vh;
-    width: 80%;
-    margin-left: 20px;
-  }
-  
+
   .operations-panel {
     display: flex;
     align-items: center;
@@ -119,3 +103,40 @@
     line-height: 1.6;
   }
   
+  .operations-panel {
+    display: flex;
+    width: 100%;
+    max-width: 1500px; /* Ancho máximo para pantallas grandes */
+    margin: 0 auto;
+    padding: 20px;
+    border: 2px solid #ccc; /* Opcional: bordes */
+    border-radius: 10px; /* Opcional: esquinas redondeadas */
+    overflow: hidden;
+    background-color: rgba(203, 220, 247); /* Fondo opcional */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Sombra opcional */
+    align-items: center;
+  }
+  
+  .unity-frame {
+    width: 100%;
+    height: 100%;
+    aspect-ratio: 16 / 9; /* Mantener la proporción 16:9 */
+    border: none; /* Quita el borde del iframe */
+  }
+  
+  @media (max-width: 768px) {
+    .operations-panel {
+      padding: 10px;
+    }
+  }
+  
+  @media (max-width: 480px) {
+    .operations-panel {
+      padding: 5px;
+    }
+    
+    .unity-frame {
+      aspect-ratio: 4 / 3;
+     }
+  
+  }
