--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,25 +1,51 @@
 /* Header.css */
+@font-face {
+  font-family: 'Flux Regular'; /* Nombre de la fuente */
+  src: url('./adds/flux-regular.otf') format('opentype'); /* Ruta relativa al archivo */
+}
+
 .header {
     background-color: #0d3b66;
     color: #f1faee;
-    /* display: flex; */
-    /* justify-content: start;
-    align-items: center; */
+    display: flex;
+    justify-content: start;
     padding: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    z-index: 2;
   }
   
   .nav-button {
     background: none;
     border: none;
-    color: #f1faee;
-    font-size: 20px;
-  
     cursor: pointer;
+  }
+
+  .nav-button2 {
+    background: none;
+    border: none;
+    cursor: pointer;
+    align-self: center;
   }
   
   .nav-button:hover {
     color: #a8dadc;
   }
   
-  
+  .header-title {
+    margin: 0;
+    font-family: 'Flux Regular';
+    flex: 1;
+    text-align: center;
+    align-self: center;
+    color: #FFE98B; /* Cambia el color si lo necesitas */
+    font-size: 2rem; /* Ajusta el tamaño de la fuente */
+    font-weight: bold;
+  }
+
+  .cont-header-title{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-self: center;
+  }
