--- a/src/components/Variables.css
+++ b/src/components/Variables.css
@@ -42,51 +42,40 @@
   margin: 10px 0;
 }
 
-.operations-panel {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  background-color: rgba(203, 220, 247); /* Fondo opcional */
-  border-radius: 10px;
-  border: 2px solid #ccc;
-  position: relative;
-  width: 100%;
-  max-width: 1500px;
-  height: 750px;
-  margin: 0 auto;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  overflow: hidden;
-}
-
 /* ::-webkit-scrollbar {
   display: none;
   } */
 
-.unity-frame {
-  width: 100%;
-  height: 100%;
-  border: none;
-}
 
-.description-section, .examples-section, .videos-section, .game-section {
+.description-section, .examples-section, .videos-section{
   margin: 20px;
+  
 }
 
-.description-section h2, .examples-section h2, .videos-section h2, .game-section h2{
+.description-section{
+  margin-left: 10%; margin-right: 10%;
+  
+}
+
+.description-section h2, .examples-section h2, .videos-section h2{
   font-size: 25px;
   color: #1e61a0;
   margin-bottom: 10px;
   margin-top: 50px;
+  text-align: center;
 }
 
-.description-section h3, .examples-section h3, .videos-section h3, .game-section h3{
+.description-section h3, .examples-section h3, .videos-section h3{
   font-size: 22px;
+  color: #1e61a0;
+
 }
 
-.description-section p, .examples-section p, .videos-section p, .game-section p{
+.description-section p, .examples-section p, .videos-section p{
   font-size: 20px;
   color: #555;
   line-height: 1.6;
+  text-align: justify;
 }
 
 /* Contenedor de Tabs */
@@ -95,6 +84,7 @@
   justify-content: center;
   margin-top: 20px;
   background-color: #f1f1f1;
+  margin-left: 10%; margin-right: 10%;
 }
 
 /* Estilos para cada Tab */
@@ -112,6 +102,7 @@
   border-radius: 8px 8px 0 0;
   transition: background-color 0.3s, color 0.3s;
   border-bottom: 2px solid #0d3b66;
+  
 }
 
 .tab:hover {
@@ -137,21 +128,25 @@
   font-size: 16px;
   border: 2px solid #0d3b66;
   border-top: none;
-  padding-left: 20%; padding-right: 20%;
+  padding-left: 5%; padding-right: 5%;
+  margin-left: 10%; margin-right: 10%;
 }
 
-/* Responsividad */
-@media (max-width: 1400px) {
-  .operations-panel {
-    height: 500px;
-    width: 80%;
-  }
+/*VIDEO*/
+.Videos{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  
+}
+.Videos iframe{
+  min-height: 720px;
 }
 
-@media (max-width: 1180px) {
-  .operations-panel {
-    height: 470px;
-    width: 90%;
-  }
+.Video img{
+  max-width:854px;
+  max-height:480px;
 }
 
